<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_debt">Add new debt</string>
    <string name="edit_debt">Edit/Close debt</string>
    <string name="payer">Who paid?</string>
    <string name="receiver">Who owes?</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="select_date">No date selected</string>

    <string name="pick_date">Select date</string>
    <string name="receipt_image">Inovice</string>
    <string name="upload_image">Upload image</string>
    <string name="mark_as_settled">Mark as completed</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="addnewdebit">" Add new debit"</string>
    <string name="payername">Payer</string>
    <string name="recipientname">Recipient</string>
    <string name="total">Amuont (₪)</string>
    <string name="choosedate">Choose date</string>
    <string name="choose">Choose</string>
    <string name="inoviceimage">Inovice image</string>
    <string name="chooseimage">Choose image</string>
    <string name="paid">Mark as completed</string>
    <string name="noopendebts">No open debts</string>
    <string name="inovice">Inovice</string>
    <string name="add_new_debit">Add new debit</string>
    <string name="recipient">Recipient</string>
    <string name="choose_date">Choose date</string>
    <string name="invoice_optional">Invoice (optional)</string>
    <string name="choose_image">Choose image</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="debtpal">DebtPal</string>
    <string name="main_menu">Main Menu</string>
    <string name="legend_unsettled">Open</string>
    <string name="legend_new">New</string>
    <string name="legend_settled">Closed</string>
    <string name="stat_status_breakdown">Status Breakdown</string>
    <string name="payer_to_receiver">%1$s → %2$s</string>
    <string name="amount_format">₪%.2f</string>
    <string name="handled">Handled</string>
    <string name="name_format">%1$s paid to %2$s</string>
    <string name="app_logo">logo</string>
    <string name="manage_your_debts">Manage your debts</string>
    <string name="with_ease">with ease</string>
    <string name="favorite">check as favorite</string>
    <string name="no_favorites">No favorites</string>
    <string name="no_closed_debts">No closed debts</string>
    <string name="closed_debts">Closed Debts</string>
    <string name="sync_background">sync_background</string>
    <string name="favorites">favorites</string>
    <string name="sync_now">Sync now</string>
    <string name="lunch_at_restaurant">Lunch at restaurant</string>
    <string name="debt_image">Debt image</string>
    <string name="select_image_source">Select image source</string>
    <string name="please_fill_all_fields">Please fill all the required fields</string>
    <string name="Amount_must_be_a_valid_number">Amount must be a valid number</string>
    <string name="delete_debt">Delete debt</string>
    <string name="are_you_sure_delete_debt">Are you sure you want to delete this debt?</string>
    <string name="cancel">Cancel</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_required_to_access_images">Cannot access camera or gallery without permission.</string>
    <string name="ok">Ok</string>
    <string name="loading_rates">Failed to load USD rate</string>
    <string name="sync_sent">Sync sent</string>
    <string name="usd_rate_not_available">USD rate not found</string>
    <string name="loading">Loading...</string>
    <string name="error_only_letters">Only letters allowed for payer  and receiver names</string>

</resources>